# biliterminal

./: .gitignore  CHANGELOG.md  README.md  biliterminal  pyproject.toml
bili_terminal/: __main__.py  audio.py  bilibili_cli.py  build_macos_app.sh  cli.py  client.py  core.py  generate_readme_screenshots.py  history.py  models.py  output.py  paths.py  platform_audio.py  platform_audio_nt.py  platform_audio_posix.py  qr.py  repl.py  start.bat  start.sh  textutil.py  tui.py  video_player.py
bili_terminal/macos/: BiliTerminal.applescript  biliterminal_audio_helper.m  launch.command  runtime_entry.py
bili_terminal/tests/: test_bilibili_cli.py  test_build_macos_app.py  test_core.py  test_entrypoints.py  test_launch_scripts.py  test_platform_audio.py  test_readme_screenshots.py  test_textual_app.py
bili_terminal/tui/: __init__.py  app.py  keymap.py  screens.py  styles.tcss  utils.py  widgets.py
bili_terminal/tui/screens/: __init__.py  detail.py  favorites.py  history.py  home.py  search.py  theme_picker.py  watch_later.py
bili_terminal/tui/styles/: bili_dark.tcss
bili_terminal/tui/widgets/: __init__.py  audio_bar.py  comment_view.py  video_list.py
bili_terminal/windows/: build_windows_app.ps1  launch.bat
docs/: textual-phase1-architecture.md  textual_phase1_architecture.md
docs/superpowers/plans/: 2026-04-13-audio-worker-module-entrypoint.md  2026-04-13-windows-build.md
docs/superpowers/specs/: 2026-04-13-windows-adaptation-design.md  2026-04-13-windows-build-design.md
