[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biliterminal"
version = "0.3.0"
description = "Terminal-first Bilibili browser with a staged Textual migration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.90.0",
    "textual-image>=0.3.0",
]

[project.scripts]
biliterminal = "bili_terminal.__main__:main"

[tool.setuptools.packages.find]
include = ["bili_terminal*"]

[tool.setuptools.package-data]
"bili_terminal.tui" = ["styles/*.tcss"]
