[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biliterminal"
version = "0.2.0"
description = "一个轻量、低打扰、适合在终端里摸鱼刷一眼的 Bilibili 客户端"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
biliterminal = "bili_terminal.cli:main"

[tool.setuptools]
packages = ["bili_terminal"]

[tool.setuptools.package-data]
bili_terminal = ["macos/*.m"]

[tool.pytest.ini_options]
testpaths = ["bili_terminal/tests"]
